src/objects/Medical_Script__c.object
<CustomObject>
    <fields>
        <fullName>Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child</label>
        <referenceTo>Medical_Script__c</referenceTo>
        <relationshipLabel>Child</relationshipLabel>
        <relationshipName>Medical_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Medical_Script__c</referenceTo>
        <relationshipLabel>Medical Scripts (Parent)</relationshipLabel>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Script_Name__c</fullName>
        <label>Script Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sibling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sibling</label>
        <referenceTo>Medical_Script__c</referenceTo>
        <relationshipLabel>Medical Scripts (Sibling)</relationshipLabel>
        <relationshipName>Sibling</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Medical Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Medical Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>